fix(index.html): fix spacing

--- a/src/assets/styles/layout.css
+++ b/src/assets/styles/layout.css
@@ -35,7 +35,7 @@
 /* Header */
 .header__image {
     width: 100vw;   
-    max-height: 300px; 
+    max-height: 250px; 
     object-fit: cover;
 }
 
